src/layout/header/Header.css
header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem 2rem;
  margin-inline: auto;
  width: min(64rem, 100% - 40px);
}

a {
  text-decoration: none;
  color: inherit;
}

.logo {
  display: flex;
  align-items: center;
  font-size: 1.5rem;
  font-weight: 500;
}

.logo .icon {
  font-size: 2rem;
}

header ul {
  display: flex;
  align-items: center;
  gap: var(--bg-size);
  list-style: none;
  font-weight: 500;
}

header ul li:first-child {
  display: none;
  flex-direction: column;
  align-items: center;
  font-size: 2rem;
}

header ul li:first-child .icon {
  font-size: 5rem;
}

header ul li {
  position: relative;
}

header ul li::before {
  content: "";
  width: 0;
  height: 2px;
  bottom: -3px;
  border-radius: 1px;
  background-color: #000;
  position: absolute;
  transition: width 0.3s ease-in-out;
}

header ul li:hover::before {
  width: 100%;
}

header ul li a {
  display: flex;
  align-items: center;
  gap: var(--md-size);
}

header ul li a .icon {
  display: none;
  opacity: 0.7;
}

@media (max-width: 768px) {
  header {
    padding: 1rem var(--sm-size);
    justify-content: start;
    gap: var(--sm-size);
  }

  header ul {
    background-color: var(--wrapper-clr);
    top: 0;
    left: 0;
    padding: 4rem 2rem;
    flex-direction: column;
    align-items: start;
    position: absolute;
    border: 2px solid red;
    width: 65vw;
    height: 100vh;
    transition: transform 0.3s ease-in-out;
    border: 1px solid var(--border-clr);
    border-left: none;
    border-radius: 0 var(--md-size) var(--md-size) 0;
  }

  header ul.close {
    transform: translateX(-500px);
  }
  header ul li a .icon {
    display: flex;
  }
  header ul li:hover::before {
    width: 0;
  }
  header ul li:first-child {
    display: flex;
  }
}

